--- a/home.html
+++ b/home.html
@@ -68,18 +68,18 @@
         <!-- menu start -->
         <section class="menu" id="menu">
             <ul class="list" data-aos="fade-down">
-                <li class="btn active" href="#content1" data-src="./assets/sisu9_photos/ds9.jpeg">Tasarım</li>
-                <li class="btn" href="#content2" data-src="./assets/sisu9_photos/cd1.jpeg">Yazılım</li>
-                <li class="btn" href="#content3" data-src="./assets/sisu9_photos/cd3.jpeg">Geliştirme</li>
-                <li class="btn" href="#content4" data-src="./assets/sisu9_photos/cons1.jpeg">Danışmanlık</li>
+                <li class="btn active" href="#content1" data-src="./assets/sisu9_photos/den2.jpg">Tasarım</li>
+                <li class="btn" href="#content2" data-src="./assets/sisu9_photos/den3.jpg">Yazılım</li>
+                <li class="btn" href="#content3" data-src="./assets/sisu9_photos/cd3.jpg">Geliştirme</li>
+                <li class="btn" href="#content4" data-src="./assets/sisu9_photos/cons2.jpg">Danışmanlık</li>
             </ul>
             <div class="row" data-aos="fade-right">
                 <div class="image" data-aos="fade-left">
-                    <img src="./assets/sisu9_photos/ds9.jpeg" id="menu-img" alt="">
+                    <img src="./assets/sisu9_photos/den2.jpg" id="menu-img" alt="">
                 </div>
                 <div id="menu-content" class="content" data-aos="fade-left">
                     <div class="info active" id="content1">
-                        <h3>Bring us your toughest challenges.</h3>
+                        <h3>Etkileyici Hafif Tasarımlar</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus pariatur omnis, doloribus officia iste soluta 
                             deleniti aut vel, excepturi modi.</p>
