referans kısımları güncellendi

--- a/home.html
+++ b/home.html
@@ -85,19 +85,19 @@
                             deleniti aut vel, excepturi modi.</p>
                     </div>
                     <div class="info" id="content2">
-                        <h3>EEEEE us your toughest challenges.</h3>
+                        <h3>Güçlü Yazılımlar</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus pariatur omnis, doloribus officia iste soluta 
                             deleniti aut vel, excepturi modi.</p>
                     </div>
                     <div class="info" id="content3">
-                        <h3>CCCC us your toughest challenges.</h3>
+                        <h3>Sistem Geliştirmeleri ve Entegrasyon</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus pariatur omnis, doloribus officia iste soluta 
                             deleniti aut vel, excepturi modi.</p>
                     </div>
                     <div class="info" id="content4">
-                        <h3>AAAA us your toughest challenges.</h3>
+                        <h3>Teknoloji Danışmanlığı</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus pariatur omnis, doloribus officia iste soluta 
                             deleniti aut vel, excepturi modi.</p>
@@ -110,10 +110,9 @@
         <section class="references" id="references">
             <div class="logo-container">
                 <div class="logo-box">
-                    <div class="logo-frame"><h6>Rob10 <br> Robotics</h6></div>
-                    <div class="logo-frame"><h6>Tuborg</h6></div>
-                    <div class="logo-frame"><h6>Ocalis <br> Mühendislik </h6></div>
-                    <div class="logo-frame"><h6>ACT HSE</h6></div>  
+                    <div class="logo-frame"><img src="./assets/logos/tuborg.png" loading="lazy" alt=""></div>
+                    <div class="logo-frame"><img src="./assets/logos/act.png" loading="lazy" alt=""><h6>ACT HSE</h6></div>  
+                    <div class="logo-frame"><img src="./assets/logos/ocalis.png" loading="lazy" alt=""><h6>Ocalis Mühendislik </h6></div>
                 </div>
             </div>
             <div class="content-box">
