--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
             <div class="about-container">
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/28058850_10214999052871902_4904848385259568960_n.jpg" alt="">
+                        <img src="./assets/sisu9_photos/erdi.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Erdi Şener</h5>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/97241896_10157857530289748_7554522095531589632_n.jpg" alt="">
+                        <img src="./assets/sisu9_photos/kayhan.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Kayhan Açıkgöz</h5>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/1003228_715057048524505_1440510623_n.jpg" alt="">
+                        <img src="./assets/sisu9_photos/mert.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Mert Akıner</h5>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/WhatsApp Image 2021-08-10 at 21.10.51.jpeg" alt="">
+                        <img src="./assets/sisu9_photos/monder.jpeg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Mehmet Önder</h5>
