giriş ekranı değişiklik

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3>Yazılım</h3>
             </div>
             <div class="opening-bottom">
-                <h3>Tasarım</h3>
+                <h3>Mazılım</h3>
             </div>
         </div>
 
