fotolar aws linkleriyle değiştirildi

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         <section class="home" id="home">
             <div class="home-image">
                 <!--<img src="./assets/Frame 63.png" alt="">-->
-                <img src="./assets/bg/bg6.jpeg" alt="">
+                <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/bg6.jpeg" alt="">
             </div>
             <div class="content" data-aos="fade-right">
                 <h5>Sisu9 Teknoloji</h5>
@@ -61,21 +61,21 @@
                     hizmeti sunmaktayız.</p>
             </div>
             <div class="image" data-aos="fade-right">
-                <img src="./assets/sisu9_photos/a4.jpeg" alt="">
+                <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/a4.jpeg" alt="">
             </div>
         </section>
         <!-- company end -->
         <!-- menu start -->
         <section class="menu" id="menu">
             <ul class="list" data-aos="fade-down">
-                <li class="btn active" href="#content1" data-src="./assets/sisu9_photos/den2.jpg">Tasarım</li>
-                <li class="btn" href="#content2" data-src="./assets/sisu9_photos/den3.jpg">Yazılım</li>
-                <li class="btn" href="#content3" data-src="./assets/sisu9_photos/cd3.jpg">Geliştirme</li>
-                <li class="btn" href="#content4" data-src="./assets/sisu9_photos/cons2.jpg">Danışmanlık</li>
+                <li class="btn active" href="#content1" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den2.jpg">Tasarım</li>
+                <li class="btn" href="#content2" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den3.jpg">Yazılım</li>
+                <li class="btn" href="#content3" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cd3.jpg">Geliştirme</li>
+                <li class="btn" href="#content4" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cons2.jpg">Danışmanlık</li>
             </ul>
             <div class="row" data-aos="fade-right">
                 <div class="image" data-aos="fade-left">
-                    <img src="./assets/sisu9_photos/den2.jpg" id="menu-img" alt="">
+                    <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den2.jpg" id="menu-img" alt="">
                 </div>
                 <div id="menu-content" class="content" data-aos="fade-left">
                     <div class="info active" id="content1">
@@ -110,9 +110,9 @@
         <section class="references" id="references">
             <div class="logo-container">
                 <div class="logo-box">
-                    <div class="logo-frame"><img src="./assets/logos/tuborg.png" loading="lazy" alt=""></div>
-                    <div class="logo-frame"><img src="./assets/logos/act.png" loading="lazy" alt=""><h6>ACT HSE</h6></div>  
-                    <div class="logo-frame"><img src="./assets/logos/ocalis.png" loading="lazy" alt=""><h6>Ocalis Mühendislik </h6></div>
+                    <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/tuborg.png" alt=""></div>
+                    <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/act.png" alt=""><h6>ACT HSE</h6></div>  
+                    <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/ocalis.png" alt=""><h6>Ocalis Mühendislik </h6></div>
                 </div>
             </div>
             <div class="content-box">
@@ -128,7 +128,7 @@
             <div class="about-container">
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/erdi.jpg" alt="">
+                        <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/erdi.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Erdi Şener</h5>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/kayhan.jpg" alt="">
+                        <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/kayhan.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Kayhan Açıkgöz</h5>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/mert.jpg" alt="">
+                        <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/mert.jpg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Mert Akıner</h5>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="about-card" data-aos="fade-up">
                     <div class="about-card-image">
-                        <img src="./assets/sisu9_photos/monder.jpeg" alt="">
+                        <img src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/monder.jpeg" alt="">
                     </div>
                     <div class="about-card-header">
                         <h5>Mehmet Önder</h5>
