fotolar optimize edildi

--- a/home.html
+++ b/home.html
@@ -69,9 +69,9 @@
         <section class="menu" id="menu">
             <ul class="list" data-aos="fade-down">
                 <li class="btn active" href="#content1" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den2.jpg">Tasarım</li>
-                <li class="btn" href="#content2" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den3.jpg">Yazılım</li>
-                <li class="btn" href="#content3" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cd3.jpg">Geliştirme</li>
-                <li class="btn" href="#content4" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cons2.jpg">Danışmanlık</li>
+                <li class="btn" href="#content2" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den3.jpeg">Yazılım</li>
+                <li class="btn" href="#content3" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cd3.jpeg">Geliştirme</li>
+                <li class="btn" href="#content4" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cons2.jpeg">Danışmanlık</li>
             </ul>
             <div class="row" data-aos="fade-right">
                 <div class="image" data-aos="fade-left">
