--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
                 <div class="logo-box">
                     <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/tuborg.png" alt=""></div>
                     <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/act.png" alt=""><h6>ACT HSE</h6></div>  
-                    <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/ocalis.png" alt=""><h6>Ocalis Mühendislik </h6></div>
+                    <div class="logo-frame"><img src="https://sisu9.s3.eu-north-1.amazonaws.com/logos/ocalis.pnc" alt=""><h6>Ocalis Mühendislik </h6></div>
                 </div>
             </div>
             <div class="content-box">
