Son responsive düzenlemeler

--- a/home.html
+++ b/home.html
@@ -50,6 +50,10 @@
         <!-- home end -->
         <!-- company start -->
         <section class="company" id="company">
+            <button class="scrollToTopBtn">
+                <div class="up">yukarı</div>
+                <i class="fas fa-chevron-circle-up"></i>
+            </button>
             <div class="content" data-aos="fade-left">
                 <h3>Tasarlıyoruz, yaratıyoruz, geliştiriyoruz...</h3>
                 <p>20 yılı aşkın süredir web teknolojileri alanında, şık tasarımların fonksiyonel 
