ana banner connent güncellendi to resolve #1

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             <div class="content" data-aos="fade-right">
                 <h5>Sisu9 Teknoloji</h5>
                 <h6>Verimlilik, zaman ve yenilik ihtiyaçlarını 
-                    karşılamaya yönelik teknolojik çözümler sunar.
+                    karşılamaya yönelik teknolojik çözümler sunar...
                 </h6>
                 <!--<a href="#company"><button class="btn">Daha fazla Öğren  >> </button></a>-->
             </div>
