Giriş yazısı değiştirildi resolve #2

--- a/home.html
+++ b/home.html
@@ -41,8 +41,7 @@
             </div>
             <div class="content" data-aos="fade-right">
                 <h5>Sisu9 Teknoloji</h5>
-                <h6>Verimlilik, zaman ve yenilik ihtiyaçlarını 
-                    karşılamaya yönelik teknolojik çözümler sunar...
+                <h6>Ürettiğiniz değer için dijital deneyimler oluşturmanıza yardımcı oluyoruz.
                 </h6>
                 <!--<a href="#company"><button class="btn">Daha fazla Öğren  >> </button></a>-->
             </div>
