--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
             </div>
             <div class="content" data-aos="fade-right">
                 <h5>Sisu9 Teknoloji</h5>
-                <h6>Ürettiğiniz değer için dijital deneyimler oluşturmanıza yardımcı oluyoruz.
+                <h6>Ürettiğiniz değer için dijital deneyimler oluşturmanıza yardımcı oluyoruz..
                 </h6>
                 <!--<a href="#company"><button class="btn">Daha fazla Öğren  >> </button></a>-->
             </div>
