--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="opening-container">
             <div class="opening-top">
-                <h3>Yazılım</h3>
+                <h3>Software</h3>
             </div>
             <div class="opening-bottom">
-                <h3>Tasarım</h3>
+                <h3>Design</h3>
             </div>
         </div>
 
