tasarım ve yazılım yazısı içeriği

--- a/home.html
+++ b/home.html
@@ -75,8 +75,8 @@
             <ul class="list" data-aos="fade-down">
                 <li class="btn active" href="#content1" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den2.jpg">Tasarım</li>
                 <li class="btn" href="#content2" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/den3.jpeg">Yazılım</li>
-                <li class="btn" href="#content3" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cd3.jpeg">Geliştirme</li>
-                <li class="btn" href="#content4" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cons2.jpeg">Danışmanlık</li>
+               <!--  <li class="btn" href="#content3" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cd3.jpeg">Geliştirme</li> -->
+                <li class="btn" href="#content4" data-src="https://sisu9.s3.eu-north-1.amazonaws.com/photos/cons2.jpeg">Teknoloji Danışmanlığı</li>
             </ul>
             <div class="row" data-aos="fade-right">
                 <div class="image" data-aos="fade-left">
@@ -86,28 +86,90 @@
                     <div class="info active" id="content1">
                         <h3>"Her harika tasarım, daha da iyi bir hikayeyle başlar."</h3>
                         <blockquote>-Lorinda Mamo</blockquote>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Temporibus pariatur omnis, doloribus officia iste soluta 
-                            deleniti aut vel, excepturi modi.</p>
+                        <p>Yaratıcı tasarıma olan tutukumuzu yansıtmak için kullanıcı arayüzü (UI) ve kullanıcı deneyimi (UX) alanlarını kendimize tuval olarak belirledik. Kullanıcıların dijital sistemlerdeki seyahatlerini hikayeleştirerek, onların bu yolculukları için tasarladığımız görsel ve zihinsel senaryoları dijital deneyimle buluşturuyoruz.</p>
+                        <div class="tools">
+                            <h3>Tasarım Araçlarımız</h3>
+                            <div class="box-container">
+                                <div class="box" >
+                                    <img src="assets/ps.png" 
+                                        alt="photoshop"></img>
+                                        <h3>Adobe PS</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/figma.png" 
+                                        alt="photoshop"></img>
+                                        <h3>Figma</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/miro.png" 
+                                        alt="photoshop"></img>
+                                        <h3>Miro</h3>
+                            </div>
+                        </div>
+
+                        </div>
                     </div>
                     <div class="info" id="content2">
                         <h3>"Programlama sanatı, biçimlendirme, diller, araçlar, algoritmalar veya veri yapıları ile değil, empati ile başlar."</h3>
                         <blockquote>-Kent Beck</blockquote>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Temporibus pariatur omnis, doloribus officia iste soluta 
-                            deleniti aut vel, excepturi modi.</p>
+                        <p>Proje ortaklarımızın ürettiği değeri dijital ortama aktarmak için güçlü bir iletişim dilinin öncelikli olduğuna inanıyoruz. "Önce sorunu çöz, sonra kodu yaz" mottosuyla geliştirdiğimiz her bir proje için, özel olarak tasarladığımız önyüz (frontend) ve arkayüz (backend) yazılım mimarilerine güncel kodlama araçlarıyla hayat veriyoruz.</p>
+                        <div class="tools">
+                            <h3>Kullandığımız Yazılım Araçları ve Teknolojileri</h3>
+                            <div class="box-container">
+                                <div class="box" >
+                                    <img src="assets/html.png" 
+                                        alt="html"></img>
+                                        <h3>HTML5</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/css.png" 
+                                        alt="css"></img>
+                                        <h3>CSS3</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/js.png" 
+                                        alt="js"></img>
+                                        <h3>JavaScript</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/vue.png" 
+                                    alt="vue"></img>
+                                    <h3>Vue JS</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/php.png" 
+                                        alt="php"></img>
+                                        <h3>PHP</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/mysql.png" 
+                                        alt="mysql"></img>
+                                        <h3>MySQL</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/aws.png" 
+                                        alt="aws"></img>
+                                        <h3>Amazon AWS</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/git.png" 
+                                        alt="git"></img>
+                                        <h3>Git</h3>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="info" id="content3">
+
+                    <!-- <div class="info" id="content3">
                         <h3>Sistem Geliştirmeleri ve Entegrasyon</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus pariatur omnis, doloribus officia iste soluta 
                             deleniti aut vel, excepturi modi.</p>
-                    </div>
+                    </div> -->
                     <div class="info" id="content4">
-                        <h3>Teknoloji Danışmanlığı</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Temporibus pariatur omnis, doloribus officia iste soluta 
-                            deleniti aut vel, excepturi modi.</p>
+                        <h3>"Projeleri başarılı kılan metodolojiler veya araçlar değil, insanlardır."</h3>
+                        <blockquote>-Lisa Crispin</blockquote>
+                        <p>Proje ortaklarımızla güvene dayalı iş birliği çerçevesinde, tecrübe aktarımı ve paylaşıma açıklık </p>
                     </div>
                 </div>
             </div>
