mert son dokunuşlar

--- a/home.html
+++ b/home.html
@@ -169,7 +169,29 @@
                     <div class="info" id="content4">
                         <h3>"Projeleri başarılı kılan metodolojiler veya araçlar değil, insanlardır."</h3>
                         <blockquote>-Lisa Crispin</blockquote>
-                        <p>Proje ortaklarımızla güvene dayalı iş birliği çerçevesinde, tecrübe aktarımı ve paylaşıma açıklık </p>
+                        <p>
+                            SAP, Oracle ve Microsoft gibi geliştiricilerin sunduğu çözümleri kullanan işletmelerde 10 yılı aşkın zamandır kazandığımız deneyimlerimiz ile size ve hedeflerinize en uygun çözüm yaklaşımlarını paylaşmaktayız.
+                        </p>
+                        <div class="tools">
+                            <h3>Danışmanlığını Verdiğimiz Ürünler</h3>
+                            <div class="box-container">
+                                <div class="box" >
+                                    <img src="assets/sap.png" 
+                                        alt="sap"></img>
+                                        <h3>SAP</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/oracle.png" 
+                                        alt="oracle"></img>
+                                        <h3>Oracle</h3>
+                                </div>
+                                <div class="box" >
+                                    <img src="assets/microsoft.png" 
+                                        alt="microsoft"></img>
+                                        <h3>Microsoft</h3>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
