ingilizce çeviri ve son dokunuşlar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             })
 
             window.setTimeout(function() {
-                window.location.href = 'home.html';
+                window.location.href = 'home-en.html';
             }, 8000);
       
         </script>
