--- a/home-en.html
+++ b/home-en.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width_device-width, initial-scale=1.0">
-        <title>sisu9</title>
+        <meta name="description" content="We help you create digital experiences for the value you generate..">
+        <title>sisu9 Technology</title>
         <!-- aos css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css">
         <!-- google font -->
