--- a/home-tr.html
+++ b/home-tr.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width_device-width, initial-scale=1.0">
+        <meta name="description" content="Ürettiğiniz değer için dijital deneyimler oluşturmanıza yardımcı oluyoruz..">
         <title>sisu9 Teknoloji</title>
         <!-- aos css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css">
