--- a/home-tr.html
+++ b/home-tr.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width_device-width, initial-scale=1.0">
         <meta name="description" content="Ürettiğiniz değer için dijital deneyimler oluşturmanıza yardımcı oluyoruz..">
         <title>sisu9 Teknoloji</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <!-- aos css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css">
         <!-- google font -->
