--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="We help you create digital experiences for the value you generate..">
         <meta name="keywords" content="Web development, HTML, CSS, JavaScript, PHP, VueJS, Figma">
         <title>sisu9 Technology</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <!-- aos css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css">
         <!-- google font -->
