--- a/home-tr.html
+++ b/home-tr.html
@@ -315,7 +315,7 @@
                 </div>
             </div>
             <div class="footer">
-                <h1 class="credit">create by <a href="#">sisu9</a></h1>
+                <h1 class="credit">created by <a href="#">sisu9</a></h1>
             </div>
         </section>
         <!-- order end -->
