linkedin linki eklendi, yukarı up oldu

--- a/home-en.html
+++ b/home-en.html
@@ -54,7 +54,7 @@
         <!-- company start -->
         <section class="company" id="company">
             <button class="scrollToTopBtn">
-                <div class="up">yukarı</div>
+                <div class="up">up</div>
                 <i class="fas fa-chevron-circle-up"></i>
             </button>
             <div class="content" data-aos="fade-left">
@@ -311,8 +311,8 @@
                 </div>
                 <div class="box">
                     <h3>Follow Us</h3>
+                    <a href="https://www.linkedin.com/company/sisu9-technology" target="_blank">Linkedin</a>
                     <a href="#">Twitter - soon</a>
-                    <a href="#">Linkedin - soon</a>
                 </div>
             </div>
             <div class="footer">
