--- a/home-tr.html
+++ b/home-tr.html
@@ -311,8 +311,8 @@
                 </div>
                 <div class="box">
                     <h3>Bizi Takip Edin</h3>
+                    <a href="https://www.linkedin.com/company/sisu9-technology" target="_blank">Linkedin</a>
                     <a href="#">Twitter - yakında</a>
-                    <a href="#">Linkedin - yakında</a>
                 </div>
             </div>
             <div class="footer">
